@@ -4,7 +4,7 @@
 {% block titletag %}{% trans 'Preview error' %}{% endblock %}
 
 {% block content %}
-    <header class="nice-padding" role="banner">
+    <header class="nice-padding">
         <h1>{% trans 'Preview error' %}</h1>
     </header>
     <div class="nice-padding">
