@@ -34,7 +34,7 @@
         {% block form %}{{ edit_handler.render_form_content }}{% endblock %}
 
         {% block footer %}
-            <footer role="contentinfo">
+            <footer>
                 <ul>
                     <li class="actions">
                         {% block form_actions %}
