@@ -15,7 +15,7 @@
 
 {% block content %}
     {% block header %}
-        <header class="nice-padding hasform" role="banner">
+        <header class="nice-padding hasform">
             <div class="row header-title">
                 <div class="left">
                     <div class="col">
