@@ -44,7 +44,7 @@
 
     {% block footer %}
         {% if buttons %}
-            <footer role="contentinfo">
+            <footer>
                 <div class="button-group">
                     {% for button in buttons %}
                         {% include "modeladmin/includes/button.html" %}
