@@ -635,7 +635,7 @@
             </div>
 
             <p>These can also have an inverted  theme:</p>
-            <header class="nice-padding" role="banner">
+            <header class="nice-padding">
                 <div class="c-dropdown  t-inverted" data-dropdown="">
                     <a class="c-dropdown__button  u-btn-current">
                         More
