@@ -9,7 +9,7 @@
         {% csrf_token %}
         {{ edit_handler.render_form_content }}
 
-        <footer role="contentinfo">
+        <footer>
             <ul>
                 <li class="actions">
                     <div class="dropdown dropup dropdown-button match-width">
